--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 
 El Gantt creates a Gantt calendar from your orgmode files. It provides a flexible customization system with the goal of being adaptable to ?multiple purposes. You can move dates, scroll forward and backward, jump to the underlying org file, and customize the display. 
 
-This package is under ongoing development. Ideas are welcome. Feature requests and bug reports are welcome. Help is welcome. 
+This package is under ongoing development. Feature requests and bug reports are welcome. Help is welcome. 
 
 [[file:screenshots/output-2020-07-20-14:25:27.gif]]
 ** Installation
@@ -571,4 +571,4 @@ Not without significant changes to the code, or breaking other existing features
 They are pretty. You can also customize where the midpoint of the gradient appears so it reflects remaining time. If you don't like gradients, then just use the same start and end color. 
 ** Change log
 *** [2020-07-31 Fri] 
-Added header-line-format =elgantt-custom-header-line= and =elgantt--header-line-formatter= and updated the readme. 
+Added =elgantt-custom-header-line= and =elgantt--header-line-formatter= 
